--- a/src/main/webapp/admin/add-product.xhtml
+++ b/src/main/webapp/admin/add-product.xhtml
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
-<head>
+<h:head>
     <title>Add product</title>
     <style> .form-group { margin-bottom: 10px; } </style>
-</head>
+</h:head>
 
 <h:body>
     <div class="card" style="padding: 20px;">
