--- a/src/main/webapp/user/signup.xhtml
+++ b/src/main/webapp/user/signup.xhtml
@@ -23,11 +23,11 @@
                 <p:message for="email" />
 
                 <p:outputLabel for="password" value="Password:" style="display: block; margin-bottom: 3px; margin-top: 10px;"/>
-                <p:password id="password" value="#{userSignUpBean.plainPassword}" required="true" requiredMessage="Password is required." style="width: 95%;" feedback="false" label="Password"/>
+                <p:password id="password" value="#{userSignUpBean.plainPassword}" match="confirmPassword" required="true" requiredMessage="Password is required." style="width: 95%;" feedback="false" label="Password"/>
                 <p:message for="password"/>
 
                 <p:outputLabel for="confirmPassword" value="Confirm Password:" style="display: block; margin-bottom: 3px; margin-top: 10px;"/>
-                <p:password id="confirmPassword" value="#{userSignUpBean.plainRepeatPassword}" match="password" required="true" requiredMessage="Confirming password is required." style="width: 95%;" feedback="false" label="Confirm Password"/>
+                <p:password id="confirmPassword" value="#{userSignUpBean.plainRepeatPassword}" required="true" requiredMessage="Confirming password is required." style="width: 95%;" feedback="false" label="Confirm Password"/>
                 <p:message for="confirmPassword"/>
 
                 <div style="margin-top: 15px; text-align: center;">
