--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -24,7 +24,7 @@
 
         <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank">
             <p:button value="Manage Orders" outcome="/admin/login.xhtml" icon="pi pi-shopping-cart" style="margin-right: 10px; margin-bottom: 10px;" />
-            <p:button value="Manage Products" outcome="/admin/manage-products.xhtml" icon="pi pi-tags" style="margin-right: 10px; margin-bottom: 10px;" />
+            <p:button value="Manage Products" outcome="/admin/management-products.xhtml" icon="pi pi-tags" style="margin-right: 10px; margin-bottom: 10px;" />
             <p:button value="Add Employee" outcome="/admin/add-employee.xhtml" icon="pi pi-user-plus"
                       rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}"
                       style="margin-right: 10px; margin-bottom: 10px;" />
