Made base for order-view and added navigation

--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -58,6 +58,8 @@
                           icon="pi pi-sign-out" ajax="false" immediate="true"
                           styleClass="ui-button-danger"/>
       </h:form>
+      <div><p:button value="Menu" outcome="/user/menu.xhtml" icon="pi pi-tags" style="margin-right: 10px; margin-top: 10px;" /></div>
+      <div><p:button value="View Order" outcome="/user/order-view.xhtml" icon="pi pi-shopping-cart" style="margin-right: 10px; margin-top: 10px;" /></div>
    </p:sidebar>
 
 </h:body>
