Added order and orderitem beans, order and orderitem DAOs. Minor tweaks on order xhtml, order page is not finished.

--- a/src/main/webapp/user/order-view.xhtml
+++ b/src/main/webapp/user/order-view.xhtml
@@ -19,6 +19,8 @@
          </h:panelGrid>
       </f:facet>
 
+      <!-- use crud-->
+
    </p:panel>
 
    <p:sidebar widgetVar="sidebar2" position="right">
