--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -21,7 +21,7 @@
 
       <div class="card product">
          <h:form id="form">
-            <p:dataView var="product" value="#{showPorductBean.productList}" rows="12" paginator="true"
+            <p:dataView var="product" value="#{showProductBean.productList}" rows="12" paginator="true"
                         rowsPerPageTemplate="4,12,16"
                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                         layout="grid"
