added password reset

--- a/src/main/webapp/user/login.xhtml
+++ b/src/main/webapp/user/login.xhtml
@@ -28,6 +28,7 @@
 
             </h:panelGrid>
             <p>Don't have an account? <a href="signup.xhtml">Create a new one.</a></p>
+            <p><a href="forgot-password.xhtml">Reset password</a></p>
         </p:panel>
     </h:form>
 </h:body>
