--- a/src/main/webapp/user/signup.xhtml
+++ b/src/main/webapp/user/signup.xhtml
@@ -26,7 +26,7 @@
                 <p:password id="password" value="#{userSignUpBean.plainPassword}" match="confirmPassword" required="true" requiredMessage="Password is required." style="width: 95%;" feedback="false" label="Password"/>
                 <p:message for="password"/>
 
-                <p:outputLabel for="confirmPassword" value="Confirm Password:" style="display: block; margin-bottom: 3px; margin-top: 10px;"/>
+                <p:outputLabel for="confirmPassword" value="Confirm password:" style="display: block; margin-bottom: 3px; margin-top: 10px;"/>
                 <p:password id="confirmPassword" value="#{userSignUpBean.plainRepeatPassword}" required="true" requiredMessage="Confirming password is required." style="width: 95%;" feedback="false" label="Confirm Password"/>
                 <p:message for="confirmPassword"/>
 
