--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -15,9 +15,15 @@
             <h:outputText value="#{sessionScope.loggedInUsername}"/>
             !
         </p>
+
         <p>Your Role:
             <h:panelGroup rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">ADMIN</h:panelGroup>
             <h:panelGroup rendered="#{sessionScope.loggedInUserRole == 'EMPLOYEE'}">EMPLOYEE</h:panelGroup>
+        </p>
+
+        <!-- show current business email -->
+        <p>Your Business Email:
+            <h:outputText value="#{businessBean.email}" />
         </p>
 
         <hr/>
