--- a/src/main/webapp/user/signup.xhtml
+++ b/src/main/webapp/user/signup.xhtml
@@ -34,6 +34,8 @@
                     <p:commandButton value="Sign Up" action="#{userSignUpBean.signUp()}" update=":userSignupForm:messages" icon="pi pi-sign-in"/>
                 </div>
 
+                <p>Already have an account? <a href="login.xhtml">Log in.</a></p>
+
             </h:panelGrid>
         </p:panel>
     </h:form>
